<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".activities.AddTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/Secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_label"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nom" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/date_start_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/date_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="00-00-0000"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_start_label"
            tools:ignore="HardcodedText" />

        <DatePicker
            android:id="@+id/dateStartPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <TextView
            android:id="@+id/start_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/start_time"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateStartPicker" />


        <TextView
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="00-00"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time_label"
            tools:ignore="HardcodedText" />


        <TimePicker
            android:id="@+id/timeStartPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time" />

        <TextView
            android:id="@+id/date_end_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/date_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeStartPicker" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="00-00-0000"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_end_label"
            tools:ignore="HardcodedText" />

        <DatePicker
            android:id="@+id/dateEndPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

        <TextView
            android:id="@+id/end_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/end_time"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateEndPicker" />


        <TextView
            android:id="@+id/end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="00-00"
            android:padding="8dp"
            android:textColor="@color/Primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_time_label"
            tools:ignore="HardcodedText" />


        <TimePicker
            android:id="@+id/timeEndPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_time" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeEndPicker">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/category" />

            <RadioButton
                android:id="@+id/btn_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Primary"
                android:text="@string/personal"
                android:textColor="@color/Primary" />

            <RadioButton
                android:id="@+id/btn_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Primary"
                android:text="@string/study"
                android:textColor="@color/Primary" />

            <RadioButton
                android:id="@+id/btn_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:buttonTint="@color/Primary"
                android:text="@string/sport" />

            <RadioButton
                android:id="@+id/btn_shooping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:buttonTint="@color/Primary"
                android:text="@string/shooping" />

            <RadioButton
                android:id="@+id/btn_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:buttonTint="@color/Primary"
                android:checked="true"
                android:text="@string/other" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/priority" />

            <RadioButton
                android:id="@+id/btn_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:buttonTint="@color/Primary"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/btn_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Primary"
                android:buttonTint="@color/Primary"
                android:checked="true"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/btn_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Primary"
                android:textColor="@color/Primary"
                android:text="@string/low" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/Primary"
            android:text="@string/add_task"
            android:textColor="@color/Gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>