<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".Activities.Parametres">

    <TextView
        android:id="@+id/labale_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_langue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/Gray"
        android:padding="8dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textColor="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labale_settings" />

    <Button
        android:id="@+id/btn_code_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Primary"
        android:padding="8dp"
        android:text="@string/code_pin"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_langue" />

    <Button
        android:id="@+id/btn_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:padding="8dp"
        android:text="@string/mode"
        android:textAlignment="textStart"
        android:textColor="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_code_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>