<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".Activities.ParametresLanguage">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textColor="@color/Primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/btn_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/Primary"
            android:padding="8dp"
            android:text="@string/french"
            android:textColor="@color/Secondary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/Primary"
            android:padding="8dp"
            android:text="@string/english"
            android:textColor="@color/Secondary"
            android:textSize="18sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>