<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".Activities.ParametresCodePin">

    <TextView
        android:id="@+id/label_parametres_code_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/code_pin_settings"
        android:textColor="@color/Primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_required_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/Gray"
        android:checked="false"
        android:padding="10dp"
        android:text="@string/code_pin_requierd"
        android:textAllCaps="true"
        android:textColor="@color/Secondary"
        android:textSize="16sp"
        android:thumbTint="@color/Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_parametres_code_pin" />

    <Button
        android:id="@+id/btn_change_code_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:padding="8dp"
        android:text="@string/modify_code_pin"
        android:textAlignment="textStart"
        android:textColor="@color/Secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_required_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>